literature review update

--- a/literature/theory/reference.bib
+++ b/literature/theory/reference.bib
@@ -134,7 +134,7 @@
   url      = {https://EconPapers.repec.org/RePEc:aea:aecrev:v:80:y:1990:i:4:p:763-78}
 }
 
-@book{Ha1941,
+@book{Ha41,
   author    = {Hayek, F. A. and Caldwell, Bruce},
   editor    = {White, Lawrence H.},
   title     = {{The Pure Theory of Capital}},
@@ -240,3 +240,68 @@
   year      = {1991},
   publisher = {MIT press}
 }
+
+@article{Phi58,
+  title     = {The relation between unemployment and the rate of change of money wage rates in the United Kingdom, 1861-1957},
+  author    = {Phillips, Alban W},
+  journal   = {economica},
+  volume    = {25},
+  number    = {100},
+  pages     = {283--299},
+  year      = {1958},
+  publisher = {JSTOR}
+}
+
+@article{Fri72,
+  title     = {Have monetary policies failed?},
+  author    = {Friedman, Milton},
+  journal   = {The American Economic Review},
+  volume    = {62},
+  number    = {1/2},
+  pages     = {11--18},
+  year      = {1972},
+  publisher = {JSTOR}
+}
+
+@article{Luc76,
+  title   = {Econometric policy evaluation: A critique},
+  journal = {Carnegie-Rochester Conference Series on Public Policy},
+  volume  = {1},
+  pages   = {19-46},
+  year    = {1976},
+  issn    = {0167-2231},
+  doi     = {https://doi.org/10.1016/S0167-2231(76)80003-6},
+  url     = {https://www.sciencedirect.com/science/article/pii/S0167223176800036},
+  author  = {Robert E. Lucas}
+}
+@article{BurnCrai93,
+  author   = {Burnside, Craig and Eichenbaum, Martin and Rebelo, Sergio},
+  title    = {Labor Hoarding and the Business Cycle},
+  journal  = {Journal of Political Economy},
+  volume   = {101},
+  number   = {2},
+  pages    = {245-273},
+  year     = {1993},
+  doi      = {10.1086/261875},
+  url      = { 
+              
+              https://doi.org/10.1086/261875
+              },
+  eprint   = { 
+              
+              https://doi.org/10.1086/261875
+              
+              
+              
+              },
+  abstract = { This paper investigates the sensitivity of Solow residual based measures of technology shocks to labor hoarding behavior. Using a structural model of labor hoarding and the identifying restriction that innovations to technology shocks are orthogonal to innovations in government consumption, we estimate the fraction of the variability of the Solow residual that is due to technology shocks. Our results support the view that a significant proportion of movements in the Solow residual are artifacts of labor hoarding behavior. Specifically, we estimate that the variance of innovations to technology is roughly 50 percent less than that implied by standard real business cycle models. In addition, our results suggest that existing real business cycle studies substantially overstate the extent to which technology shocks account for the variability of postwar aggregate U.S. output. }
+}
+@article{Cla73,
+  title     = {Labor hoarding in durable goods industries},
+  author    = {Clark, C Scott},
+  journal   = {The American Economic Review},
+  pages     = {811--824},
+  year      = {1973},
+  publisher = {JSTOR}
+}
+
