--- a/literature/theory/theory.tex
+++ b/literature/theory/theory.tex
@@ -52,7 +52,7 @@
 \author{Riccardo Dal Cero}
 
 \begin{document}
-\bibliography{reference}
+
 \maketitle
 
 \begin{abstract}
@@ -113,64 +113,51 @@ equilibrium theory. Hayek's perspective is encapsulated in his own words:
     "The incorporation of cyclical phenomena into the system of economic equilibrium theory, with which they are in
     apparent contradiction, remains the crucial problem of Trade Cycle theory; 
     By 'equilibrium theory' we primarily understand the modern theory of the general interdependence of all economic
-    quantities, which has been perfectly expressed by the Lausanne School of theoretical economics." \citep{Hay33} 
+    quantities, which has been perfectly expressed by the Lausanne School of theoretical economics." \cite{Hay33} 
 \end{quote}
 
-In the turbulent era of the early 1930s, the investigation of business cycles was particularly driven by the contrasting
-views of Friedrich Hayek and John Maynard Keynes, two of the most influential economists of the 20th century. Hayek, in
-his seminal work "Monetary Theory and the Trade Cycle," \cite{Hay33} examined business cycles through the prism of monetary theory
-and its influence on the structure of capital. He posited that distortions in the economy, especially those resulting
-from the artificial lowering of interest rates by central banks, lead to malinvestments during economic booms. These
-malinvestments, particularly prevalent in capital-intensive sectors, were deemed unsustainable, culminating inevitably
-in economic downturns characterized by corrections of these misallocations. 
 
-In stark contrast stood Keynes, whose groundbreaking work "The General Theory of Employment, Interest, and Money"\cite{key60}
-offered a different vantage point. Keynes approached the issue of business cycles from the standpoint of equilibrium. He
-concentrated on the role of aggregate demand in dictating overall economic activity levels. According to Keynes, a
-deficiency in aggregate demand could result in extended periods of high unemployment. He advocated for proactive
-government intervention to invigorate demand and re-establish economic equilibrium, thus shifting the analytical focus
-from isolated markets to the economy's aggregate behavior. 
+In the turbulent era of the early 1930s, the exploration of business cycles was prominently shaped by the contrasting
+viewpoints of Friedrich Hayek and John Maynard Keynes, two of the twentieth century's most influential economists.
+Hayek's examination of business cycles, as delineated in his seminal work "Monetary Theory and the Trade Cycle,"
+\cite{Hay33}, and further elaborated in "The Pure Theory of Capital" \cite{Ha41}, provides a profound analysis
+through the lens of monetary theory and its ramifications on capital structure. Hayek posited that economic distortions,
+notably those stemming from the artificial depression of interest rates by central banks, precipitate malinvestments
+during periods of economic expansion. These malinvestments, especially prevalent in capital-intensive sectors, were
+deemed unsustainable, leading inevitably to economic downturns characterized by the correction of these misallocations. 
 
-To illustrate the technical differences between Keynes and Hayek's approaches to business cycle theory, it's helpful to
-represent their ideas through simplified equations. These equations, while not exhaustive, capture the essence of their
-theoretical perspectives. 
+Conversely, Keynes, in his groundbreaking "The General Theory of Employment, Interest, and Money" \cite{Key36},
+approached the business cycle issue from an equilibrium perspective, focusing on the role of aggregate demand in
+determining overall economic activity levels. Keynes argued that a shortfall in aggregate demand could lead to
+protracted periods of high unemployment, advocating for active government intervention to stimulate demand and
+re-establish economic equilibrium. 
 
-\begin{enumerate}
-    \item Hayek's Business Cycle Theory:
-   Hayek's theory, centered on the Austrian School's ideas, emphasizes the role of capital structure and monetary policy. A key aspect is how artificial lowering of interest rates leads to a misallocation of capital, or malinvestments. A simplified representation could be:
+Hayek's theoretical framework underscores the intricate relationship between capital investment and monetary
+disequilibrium within the business cycle. He elucidates this connection through the concept of inter-temporal
+preferences, which dictate the pace of capital investment and the extent of capital accumulation. The decision-making
+process regarding the allocation of resources between present consumption and future investment is critical to
+understanding the cyclical nature of the economy. Hayek asserts: 
 
-   \[ I_t = f(r_t, r_n) \]
-   \[ r_t < r_n \rightarrow \text{Malinvestment} \]
+\[ I_t = f(r_t, r_n) \]
+\[ r_t < r_n \rightarrow \text{Malinvestment} \]
 
-   Here, \( I_t \) represents investment at time \( t \), \( r_t \) is the artificially lowered interest rate, and \( r_n \) is the natural rate of interest. Hayek argued that when \( r_t \) is set below \( r_n \) by central banks, it leads to malinvestments, particularly in capital-intensive sectors, ultimately causing economic distortions and a business cycle.
+where \( I_t \) signifies investment at time \( t \), \( r_t \) represents the market interest rate, and \( r_n \)
+denotes the natural rate of interest. A divergence between \( r_t \) and \( r_n \), particularly when \( r_t \) is
+artificially maintained below \( r_n \), leads to malinvestments. This discrepancy between the market and natural rates
+of interest, exacerbated by the expansion of bank credit, serves as the cornerstone of Hayek's business cycle theory.
+Hayek further elaborates on the dynamic and temporal aspects of production and investment in "The Pure Theory of
+Capital" \cite{Ha41}, where he critically assesses the equilibrium-based economic theories and emphasizes the
+importance of understanding the temporal structure of capital. 
 
-    \item Keynes's Business Cycle Theory:
-   In contrast, Keynes's theory in "The General Theory of Employment, Interest, and Money" focuses on aggregate demand and its role in economic cycles. The basic Keynesian model can be represented as:
+Hayek's analysis of monetary disequilibrium and its impact on the business cycle is complemented by his insights into
+the mechanisms of bank credit creation and its influence on the natural state of equilibrium in the market for loanable
+funds. The expansion of bank credit, which decouples the market rate of interest from the natural rate, instigates
+cycles of over-investment and mal-investment, ultimately culminating in inter-temporal economic instability. 
 
-   \[ Y = C(Y - T) + I(r) + G + NX \]
-   \[ Y < Y_{full} \rightarrow \text{Increase } G \]
-
-   Here, \( Y \) is the national income, \( C \) is consumption (a function of disposable income \( Y - T \), where \( T \) is taxes), \( I \) is investment (a function of the interest rate \( r \)), \( G \) is government spending, and \( NX \) is net exports. Keynes argued that when \( Y \) is less than the full employment output (\( Y_{full} \)), it indicates insufficient aggregate demand, warranting an increase in government spending \( G \) to stimulate the economy.
-\end{enumerate}
-These equations summarize the core differences in how Hayek and Keynes viewed the drivers of business cycles. Hayek
-focused on the distortions created by monetary policy in capital investment, leading to cycles of booms and busts. In
-contrast, Keynes emphasized the role of aggregate demand in driving economic activity, advocating for fiscal policy
-interventions to manage these cycles. Their divergent views laid the foundation for much of the economic debate and
-policy formulation in the 20th century, with each theory offering distinct insights into the mechanisms of economic
-fluctuations. 
-These divergent views laid the foundation for subsequent economic theories and policy formulations, deeply influencing
-how successive generations of economists and policymakers would grapple with the complexities of business cycles and
-their implications for long-term economic growth and stability. 
-
-Responding to Keynes, Hayek further developed his ideas in "The Pure Theory of Capital," \cite{Ha1941} where he provided a detailed
-critique of equilibrium-based economic theories. Hayek's argument centered on the complexity of economic systems,
-highlighting how the notion of equilibrium oversimplified the dynamic interplay of different markets, particularly the
-capital goods market. He stressed that economic equilibrium failed to account for the temporal structure of capital and
-the dynamic processes that govern investment and production over time. Hayek posited that economic activities are
-inherently dynamic and subject to constant change, influenced by numerous factors including individual preferences,
-technological changes, and policy decisions. This view was a stark departure from Keynesian equilibrium, suggesting that
-attempts to artificially maintain economic stability could lead to unintended consequences, exacerbating economic
-fluctuations rather than smoothing them. 
+These theoretical perspectives offered by Hayek provide a nuanced understanding of the complexities inherent in the
+business cycle, challenging the Keynesian emphasis on aggregate demand and fiscal policy interventions. Hayek's
+contributions, particularly in "The Pure Theory of Capital," highlight the significance of capital theory in analyzing
+monetary disequilibria and underscore the dynamic and inter-temporal nature of economic activities. 
 
 Thus, while Keynes emphasized stabilizing aggregate demand to achieve equilibrium and mitigate business cycles, Hayek
 focused on the inherent dynamism and complexity of economic systems, criticizing equilibrium models for their
@@ -212,7 +199,7 @@ in shaping government approaches to economic policy, especially concerning busin
 Central to the Keynesian doctrine is the advocacy for proactive government intervention to stabilize economic cycles.
 This perspective gained substantial traction in the post-war era, a period marked by the reconstruction efforts of
 numerous nations. The foundational principle of Keynesianism, as articulated in Keynes's seminal work "The General
-Theory of Employment, Interest, and Money," is that government spending can act as a catalyst to stimulate demand during
+Theory of Employment, Interest, and Money," \cite{key60}is that government spending can act as a catalyst to stimulate demand during
 economic downturns. This tenet represented a stark divergence from the pre-war classical economic thought, which
 predominantly favored limited government intervention in the economy. 
 
@@ -248,12 +235,12 @@ anticipated such a simultaneous occurrence of inflation and stagnation, fundamen
 prescriptions. 
 
 The Keynesian model, as traditionally understood, posited an inverse relationship between inflation and unemployment,
-often illustrated by the Phillips Curve. This relationship suggested that higher inflation could help reduce
+often illustrated by the Phillips Curve \cite{Phi58}. This relationship suggested that higher inflation could help reduce
 unemployment by stimulating demand, and vice versa. However, the stagflation of the 1970s, where high inflation
 coexisted with high unemployment, contradicted this established Keynesian principle. The phenomenon was first brought to
 widespread attention by economists such as Milton Friedman and Edmund Phelps, who argued that the Phillips Curve could
 only function in the short term, and that long-term attempts to exploit this trade-off would lead to ever-increasing
-rates of inflation without reducing unemployment. 
+rates of inflation without reducing unemployment \cite{Fri72}. 
 
 The stagflation era was marked by several critical global events that influenced economic conditions. The 1973 oil
 crisis, triggered by an oil embargo by OPEC nations, led to a dramatic increase in oil prices, contributing
@@ -266,7 +253,7 @@ appeared ineffective in addressing the simultaneous challenges of stagnation and
 rise of alternative economic theories, such as monetarism and supply-side economics, which focused more on controlling
 inflation and stimulating supply rather than managing demand. Monetarism, championed by Milton Friedman, emphasized the
 importance of controlling the money supply to manage inflation, arguing that inflation was primarily a monetary
-phenomenon. Meanwhile, supply-side economics advocated for reducing tax rates and decreasing regulation to encourage
+phenomenon\cite{Fri72}. Meanwhile, supply-side economics advocated for reducing tax rates and decreasing regulation to encourage
 production and investment. 
 
 The emergence of stagflation and the subsequent paradigm shift in economic theory underscored the complexity of economic
@@ -278,7 +265,7 @@ where there was a move towards deregulation, reduction of government interventio
 policy to control inflation. 
 
 The narrative of economic thought in the latter half of the 20th century took a pivotal turn with the introduction of
-the Lucas Critique, formulated by economist Robert Lucas in 1976. This critique fundamentally challenged the prevailing
+the Lucas Critique, formulated by economist Robert Lucas in 1976 \cite{Luc76}. This critique fundamentally challenged the prevailing
 Keynesian orthodoxy and ushered in a new era in the understanding of economic policy and business cycles. 
 
 The Lucas Critique posited that traditional Keynesian macroeconomic models, which were used to design economic policies,
@@ -351,7 +338,7 @@ health of firms to their investment and production decisions.
 Further, the introduction of search and matching frictions in labor markets, attributed to the work of economists like
 Diamond, Mortensen, and Pissarides, highlighted how inefficiencies in matching workers with jobs could lead to
 persistent unemployment, thus influencing the business cycle. Their research, including papers like "Job Creation and
-Job Destruction in the Theory of Unemployment" (1994), was pivotal in integrating labor market dynamics into business
+Job Destruction in the Theory of Unemployment" (1994)\cite{MorDalPisChr94}, was pivotal in integrating labor market dynamics into business
 cycle theories. 
 
 The culmination of these developments is seen in the formulation of Dynamic Stochastic General Equilibrium (DSGE) models
@@ -362,21 +349,162 @@ economic fluctuations and policy impacts.
 
 \section{Theories Connecting Business Cycles to Long-Term Growth}
 
-In the realm of economic theory, approaches that link business cycles (BC) to long-term growth can broadly be
-categorized into two distinct groups. The traditional perspective posits that long-term growth is predominantly driven
-by technological progress. In many of these theories, technological advancement is treated as an exogenous factor, a
-trend in progress not explained within the model itself, as exemplified in the works of \cite{Sol56} and \cite{Swa56}.
-These models imply that technological progress is an external, independent force influencing economic growth. 
+In the domain of economic theory, the relationship between business cycles (BC) and long-term growth is dissected into
+two principal schools of thought. The conventional viewpoint suggests that long-term growth is chiefly propelled by
+technological progress. Within this framework, technological advancements are often viewed as exogenous—arising outside
+the economic model's explanatory scope, as highlighted in the seminal contributions of \cite{Sol56} and \cite{Swa56}.
+This perspective treats technological progress as an independent variable that exerts influence on economic growth
+without being influenced by the economy's internal dynamics. 
 
-On the other hand, a contrasting body of theories seeks to endogenize technological progress. These theories integrate
-mechanisms that explain technological advancement as part of the economic process itself. They incorporate factors such
-as incentives for innovation, the pursuit of education, and the acquisition of knowledge through economic activities,
-including the concept of 'learning by doing.' This approach is well-represented in studies like \cite{Sta90}, where
-technological progress is seen as a result of economic actions and incentives, rather than an external, unexplained
-variable. 
+Contrastingly, an alternative strand of theoretical work aims to endogenize technological progress, weaving it into the
+fabric of the economic process. These models embed factors such as incentives for innovation, the value of education,
+and the accumulation of knowledge through economic activities, epitomizing the 'learning by doing' paradigm. A prominent
+example of this approach is found in \cite{Sta90}, which posits technological progress as an emergent property of
+economic behavior and incentives, rather than a mysterious external force. 
 
+A critical aspect of the 'learning by doing' model is its premise that technological frontiers are contingent upon the
+existing knowledge base, which expands primarily through practical experience. Consequently, periods of economic
+expansion witness a sharp increase in the knowledge stock, driven by higher employment levels, whereas recessions tend
+to stabilize or even diminish this stock due to reduced employment rates. This dynamic suggests that economies devoid of
+cyclical fluctuations might attain a superior steady-state growth, as employment remains consistently high, fostering
+continuous technological advancement. From this perspective, the concept of a 'cleansing effect'—whereby economic
+downturns eliminate low-productivity jobs and ostensibly strengthen the economy—is challenged. The elimination of even
+low-productivity roles can erode the overall knowledge base. 
+
+Such theories reframe the discourse on stabilization policies, particularly fiscal interventions, by highlighting their
+role in sustaining employment and, by extension, supporting the technological frontier even in downturns. 
+
+To illustrate this theory's implications more vividly, consider a nuanced example: an antiquated factory with limited
+land resources discovers an innovative method to utilize an old tractor more efficiently. Despite the ingenuity of this
+breakthrough, if the broader economy has moved beyond the technology that the tractor represents, the innovation might
+not significantly contribute to the overall knowledge stock or push the technological frontier forward. This scenario
+prompts a fundamental inquiry: does innovation at the lower end of the skill spectrum or within outdated technological
+contexts meaningfully advance the technological frontier? Or, would it be more beneficial for economic growth to
+transition such small-scale innovations into larger entities equipped with modern technologies? 
+
+One significant critique concerns the disparity in learning opportunities across different sectors and among
+individuals. The model's premise of uniform learning opportunities does not always align with the reality that some
+industries, such as the technology sector, offer rapid innovation and learning environments compared to more traditional
+manufacturing industries, where the pace of learning and innovation may be inherently slower due to the nature of the
+work processes involved.
+
+Furthermore, the model may not adequately address the issue of structural unemployment that can arise from technological
+advancements. As certain workers benefit from "learning by doing," leading to increased productivity, others may find
+their skills becoming obsolete due to automation and other technological changes. This dynamic is evident in the
+automation of routine manufacturing jobs, which, while fostering "learning by doing" in fields like robotics and
+software engineering, simultaneously leads to structural unemployment for workers displaced by these technologies.
+
+Another point of contention is the potential for diminishing returns to learning. The assumption that "learning by
+doing" continuously fuels growth may not hold up against the reality that initial rapid gains in productivity tend to
+taper off as workers gain proficiency, suggesting that the benefits of learning may diminish over time.
+
+The model also potentially overlooks the externalities and spillover effects associated with "learning by doing."
+Technological advancements in one firm or sector do not automatically translate into broader economic growth if these
+advancements remain isolated and do not benefit other sectors or industries. This is illustrated by a software company
+that develops cutting-edge algorithms, enhancing its productivity but failing to contribute to the wider economy if the
+knowledge remains proprietary.
+
+
+This nuanced exploration challenges the simplistic notion of 'learning by doing' by questioning the value and impact of
+incremental innovations within the broader economic and technological ecosystem. It underscores the complexity of
+technological progress and its interplay with economic dynamics, inviting a deeper investigation into the mechanisms
+that drive long-term growth and the role of policy in nurturing an environment conducive to continuous innovation and
+knowledge expansion. 
+
+The contemporary perspective on technological advancement, when viewed as a product of incremental contributions from
+every market participant, appears overly simplistic. A more accurate depiction of technological progress recognizes it
+as predominantly driven by those at the forefront of research. The expansion of the technology frontier is essentially
+shaped by the knowledge and breakthroughs of these leading-edge innovators. Other entities in the economy adopt these
+innovations at varying paces, influenced by the associated adoption costs. While firms that are not at the innovation
+frontier may achieve marginal efficiency gains through adoption, the impact of such improvements is often minimal. These
+marginal innovations are frequently a reflection of the adopting firms' constraints, particularly their inability to
+invest in more advanced and expensive technologies. Consequently, these incremental innovations have limited potential
+for widespread diffusion, as they stem from a position of necessity rather than pioneering advancement. 
+
+Another theory describe recession as a period in which the opportunity cost of investing in a producitvity enhancing
+projects is lower, since the work force is not fully demdand to produce goods. Doing this would lead in theory to higher
+productivity in the period of expansion. The key role here is that the productivity enhancing activity are costly thus
+divert capital and labour force from production as Hayek \cite{Hay33} explained. 
+For this view to be valid there are two key aspects that should be true at the same time: in first place the
+expectations about the length of the recession should rienter in the short-term otherwise it is cheaper to destruct some
+production units (labor and capital) to accommodate the slow in demand. The last condition is that internal resources
+must be less costly than external one, however it would be cheaper to higher more skilled workers and fire the low skill
+one. An additional remark is the this theory describe the all those inniziatives like worker formation that affects only
+marginally the productivity of a firm. It miss the main mechanics in which a firm can increase his productivity sharply: thorough technical
+innovation, and in order to do so you need a research program where the workforce is fully dedicated into it and not
+diverted from production.
+
+Another theory posits that recessions offer a period in which the opportunity cost of investing in
+productivity-enhancing projects is lower, primarily because the workforce is not fully engaged in producing goods.
+Theoretically, this would lead to higher productivity during subsequent periods of expansion. A crucial element in this
+perspective is the acknowledgment that productivity-enhancing activities are expensive, thereby diverting capital and
+labor away from immediate production, a concept Hayek \cite{Hay33} elucidated. 
+
+For this viewpoint to hold, two critical conditions must be concurrently satisfied: firstly, expectations regarding the
+duration of the recession must be short-term. If the recession is anticipated to be prolonged, it becomes economically
+viable to dismantle some production units (both labor and capital) to adjust to reduced demand. Secondly, the cost of
+utilizing internal resources for such productivity-enhancing ventures must be lower than the cost of acquiring external
+resources. Otherwise, it might be more economical to hire more skilled workers and lay off less skilled ones.  
+
+An additional observation about this theory is that it accounts for initiatives like worker training, which only
+marginally affects a firm's productivity. This overlooks the primary mechanism through which a firm can significantly
+boost its productivity: through technical innovation. To achieve substantial innovation, a dedicated research program is
+essential, where the workforce is fully committed to innovation efforts rather than being diverted to current production
+tasks. This highlights a gap in the theory, suggesting that while reallocating resources during recessions may offer
+some productivity benefits, the most dramatic improvements in productivity are likely achieved through focused
+innovation and research activities, not merely through the opportunistic reallocation of resources during economic
+downturns. 
+
+An intricate theory that elaborates on the dynamics of economic recessions and the associated lower opportunity costs is
+grounded in the concept of labor hoarding, as discussed in the seminal work by Clark \cite{Cla73}. This theory posits
+that firms maintain employment levels higher than what immediate efficiency metrics might dictate. The rationale behind
+such a strategy is to prepare for a potential surge in demand, ensuring that the firm can quickly ramp up production
+without the delays associated with recruiting and training new employees. However, this strategic maneuver towards the
+internal possibility frontier—where firms optimize their readiness for future demand—does not manifest as observable
+changes in employment rates. Consequently, this leads to discrepancies or residuals in the statistical series of
+employment, which do not align with what might be considered the level of optimal employment, a phenomenon further
+analyzed in the work of Burnside and Eichenbaum \cite{BurnCrai93}. 
+
+This labor hoarding theory offers a partial explanation for the strong pro-cyclicality of measured productivity. During
+economic upturns, firms can immediately respond to increased demand using their hoarded labor, thereby appearing more
+productive. Conversely, during downturns, the reluctance to shed this excess labor, due to the anticipation of future
+demand recovery, results in lower observable productivity levels. This behavior underscores a strategic depth in firm
+management, navigating through the cyclical economic waves by balancing between immediate efficiency and long-term
+responsiveness. 
+
+Expanding on this foundation, it becomes evident that the decision to engage in productivity-enhancing activities during
+recessions is not merely a reaction to lower opportunity costs but also a strategic consideration influenced by
+expectations of the recession's duration and the comparative costs of internal versus external resources. If firms
+anticipate a short-lived recession, the logic of hoarding labor and investing in internal productivity initiatives
+becomes compelling. However, this strategy hinges on the assumption that improving the skill set of the existing
+workforce or reallocating resources towards innovation is less costly than the alternative—acquiring new, possibly more
+skilled labor post-recession. 
+
+The opportunity cost (OC) approach closely aligns with the theory of labor hoarding, which seeks to elucidate the
+pronounced procyclicality of measured productivity. This observation implies that during economic downturns, firms
+appear to retreat towards the interior of their production possibility frontier, opting for a strategic reduction in
+operational efficiency rather than workforce downsizing. This strategy is partly attributed to the invisible nature of
+one crucial input—effort—to statisticians, and the economic rationale that, given the costs associated with employee
+turnover, it proves more economically viable for firms to dial back effort during slumps instead of terminating
+employment. 
+
+An intriguing alternative to diminishing effort is the redirection of employee tasks from immediate production roles to
+undertakings that bolster the firm's long-term productivity. At first glance, this strategy bears resemblance to labor
+hoarding but carries the added outcome that these so-called shadow activities, embraced during recessions, eventually
+manifest as enhancements in total factor productivity. 
+
+The concept of adjustment costs does not singularly confine firms from adapting their production factors according to
+operational necessities. This opportunity cost mechanism could theoretically extend to a macroeconomic scale,
+influencing individual entities via price adjustments. During periods marked by diminished production value, the
+immediate returns from production activities (e.g., wages for workers) decline in comparison to alternative endeavors,
+notably human capital accumulation, whose benefits are pegged to future earnings. This economic mechanism could
+precipitate a resource reallocation towards these alternative activities. The empirical observation that education
+durations tend to extend during economic recessions lends credence to this argument. Nevertheless, with the exception of
+leisure, most sectors shadow the movements of aggregate GDP. Thus, if productivity-enhancing activities (PEAs) are to
+occur during recessions, the resource reallocation process must predominantly unfold within firms themselves. 
+
+One notable deviation might be labor reallocation. As demonstrated by Davis and Haltiwanger, job destruction exhibits a more countercyclical pattern compared to job creation. Viewing job reallocation through the lens of both destruction and creation suggests a countercyclical trend, positing job reallocation as an investment in cultivating superior firm-worker matches, thereby sowing the seeds for heightened productivity in the future. Davis and Haltiwanger further postulate, within the framework of a model featuring a representative agent, that economic recessions present an optimal window for labor reallocation, highlighting a strategic dimension to workforce management during downturns that might ultimately contribute to long-term productivity gains.
  
-
 \section[short]{Theoretical framework}
 The economy comprises risk-neutral firms with a constant discount rate represented by $0 < \beta < 1$. These firms
 exhibit heterogeneity in productivity and net worth. They employ a production technology that relies solely on capital
@@ -615,7 +743,9 @@ labor. Thus, the industry's output is given by:
 
 \[Q(t) = \int_{\overline{a}(t)}^{0}A(t-a)f(a,t)da\]
 
-The deterioration of production units involves both an exogenous depreciation rate \(\delta\) and an endogenous destruction process, which impacts \(f(a,t)\) at its limits. The count of production units surviving for \(a\) years is expressed as:
+The deterioration of production units involves both an exogenous depreciation rate \(\delta\) and an endogenous
+destruction process, which impacts \(f(a,t)\) at its limits. The count of production units surviving for \(a\) years is
+expressed as: 
 
 \[f(a,t)= f(0,t-a)e^{-\delta a} \quad \text{where } 0 < a \leq \overline{a}(t)\]
 
@@ -623,7 +753,9 @@ The production flow is determined by:
 
 \[\dot{N}(t) = f(0,t) [1-\overline{\dot{a}}(t)] + \delta N(t)\]
 
-Here, the first term represents the production rate, while the second term encapsulates the destruction rate, encompassing the obsolescence rate \(f(\overline{a})(t)\), the technological obsolescence change over time \(-f(\overline{a})(t)\overline{\dot{a}}(t)\), and the depreciation rate \(\delta N(t)\).
+Here, the first term represents the production rate, while the second term encapsulates the destruction rate,
+encompassing the obsolescence rate \(f(\overline{a})(t)\), the technological obsolescence change over time
+\(-f(\overline{a})(t)\overline{\dot{a}}(t)\), and the depreciation rate \(\delta N(t)\). 
 
 The assumptions made by the authors are denoted as \(\forall t \mid f(0,t)>0 \cup  \overline{\dot{a}}(t)<\).
 
@@ -631,7 +763,8 @@ The alteration in output concerning these flows is articulated as:
 
 \[\dot{Q}(t) = A(t)f(0,t) - A(t-\overline{a}(t))f(\overline{a}(t),t) \cdot [1-\overline{\dot{a}}(t)] + \delta Q(t)\]
 
-The authors define a perfectly competitive industry in partial equilibrium, where supply is dictated by free entry and perfect equilibrium. Additionally, they introduce a cost function related to creating new production units:
+The authors define a perfectly competitive industry in partial equilibrium, where supply is dictated by free entry and
+perfect equilibrium. Additionally, they introduce a cost function related to creating new production units: 
 
 \[c = c\left(f\left(f(0,t)\right)\right) \quad \text{where } c(\cdot)>0, \, c'(\cdot)\leq 0\]
 
@@ -686,13 +819,25 @@ conditions:
         P(t)Q(t)=\overline{D}(t)
     \end{aligned}$
 \end{enumerate}
-The first three equations (\ref{eq_2.1}, \ref{eq_2.2}, \ref{eq_2.3}) and the fifth one (\ref{eq_2.5}) suffice to delineate the trajectories of \(T(t)\), \(P(t)\), and \(Q(t)\), which are determined by \(\left\{f(0,t), \overline{a}(t)\right\}\). To affirm the robustness of the conditions expressed in equations \ref{eq_2.6} and \ref{eq_2.5}, it is possible to derive these equations as first-order conditions for the maximization of a number of perfectly competitive firms holding production units.
+The first three equations (\ref{eq_2.1}, \ref{eq_2.2}, \ref{eq_2.3}) and the fifth one (\ref{eq_2.5}) suffice to
+delineate the trajectories of \(T(t)\), \(P(t)\), and \(Q(t)\), which are determined by \(\left\{f(0,t),
+\overline{a}(t)\right\}\). To affirm the robustness of the conditions expressed in equations \ref{eq_2.6} and
+\ref{eq_2.5}, it is possible to derive these equations as first-order conditions for the maximization of a number of
+perfectly competitive firms holding production units. 
 
-To comprehend the functioning of endogenous destruction, let's consider a scenario with constant demand. In this case, both the destruction and creation rates change only due to supply factors. This steady state is characterized by a constant lifetime of production units \(T(t) = \overline{a}(t) = \overline{a}^*\), resulting in a time-invariant age distribution \(f(a,t) = f^*(a)\). Equation \ref{eq_2.5} implies that the price \(P(t)\) must consistently decrease at a rate \(\sigma\). Higher innovation rates lead to increased productivity, raising the supply and consequently lowering the price. Equation \ref{eq_2.2} reveals that the distribution of production units in the steady state follows a truncated exponential distribution:
+To comprehend the functioning of endogenous destruction, let's consider a scenario with constant demand. In this case,
+both the destruction and creation rates change only due to supply factors. This steady state is characterized by a
+constant lifetime of production units \(T(t) = \overline{a}(t) = \overline{a}^*\), resulting in a time-invariant age
+distribution \(f(a,t) = f^*(a)\). Equation \ref{eq_2.5} implies that the price \(P(t)\) must consistently decrease at a
+rate \(\sigma\). Higher innovation rates lead to increased productivity, raising the supply and consequently lowering
+the price. Equation \ref{eq_2.2} reveals that the distribution of production units in the steady state follows a
+truncated exponential distribution: 
 
 \[f^*(a) = f^*(0)e^{-\delta a} \quad 0 \leq a \leq \overline{a}^*\]
 
-Using free entry conditions (\ref{eq_2.4}) and the clearing condition (\ref{eq_2.6}), one can determine the creation and destruction ages \(f^*(0)\) and \(\overline{a}^*\). Equations \ref{eq_2.1} and \ref{eq_2.5} yield the cost function and productivity of a new production unit:
+Using free entry conditions (\ref{eq_2.4}) and the clearing condition (\ref{eq_2.6}), one can determine the creation and
+destruction ages \(f^*(0)\) and \(\overline{a}^*\). Equations \ref{eq_2.1} and \ref{eq_2.5} yield the cost function and
+productivity of a new production unit: 
 
 \[\label{eq_2.7} c(f^*(0)) = \frac{e^{\gamma \overline{a}^*} - e^{-(r + \delta)\overline{a}^*}}{\gamma + r + \sigma} - \frac{1 - e^{-(r + \delta)\overline{a}^*}}{r + \delta}\]
 
@@ -817,7 +962,10 @@ responsive to demand fluctuations, while job destruction exhibits a more counter
     \includegraphics[scale = 0.4]{Plot2.3.png}
     \caption{Table 2.1. Job Creation and Job Destruction in U.S. Manufacturing Response to Output Growth}
     \label{Table 2.1.}
-    \footnotesize \textit{Notes}: The table presents the reaction of job creation to the growth rate of the industrial production index. The latter is categorized into values above and below its mean (Q). The table encompasses quarterly observations for the two-digit SIC industries during the period 1972:2-1986:4. The coefficients are uniformly constrained to be equal across all sectors, with the exception of a constant (not shown).
+    \footnotesize \textit{Notes}: The table presents the reaction of job creation to the growth rate of the industrial
+    production index. The latter is categorized into values above and below its mean (Q). The table encompasses
+    quarterly observations for the two-digit SIC industries during the period 1972:2-1986:4. The coefficients are
+    uniformly constrained to be equal across all sectors, with the exception of a constant (not shown).  
 \end{figure}
 The initial finding indicates that the rate of job destruction displays greater responsiveness to changes in sectoral
 activity compared to the rate of job creation. Specifically, the sums of coefficients are -0.384 for job destruction and
@@ -1255,7 +1403,7 @@ Thus the debt at time t+1 is:
     & - \left\{\frac{N}{D} \cdot \left[\frac{N}{D}\left(1-\beta R_f\right) + \beta\left(r_f+\frac{\delta}{p}\right)\right]\left\{Z\alpha\left[\left(1-\beta\right)-\frac{\beta}{p}\right]\right\}^{-1} + C\right\}
 \end{align}
 
-\end{document}
+
 
 
 % Fino a qui non ho molti dubbi, mentre il seguente passaggio presenta molti dubbi e secondo me è responsabile del segno
@@ -1289,7 +1437,7 @@ Thus the debt at time t+1 is:
 
 \medskip
 
-\bibliography{reference}
 
+\bibliography{reference}
 
 \end{document}
